--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,3 @@
-<p>
-  footer works!
-</p>
+<div class="bg-light">
+  <p class="m-0">Stocks & Shares website created by Stephen Healey. All stock data provided by <a href="https://finnhub.io/" target="_blank">Finnhub</a></p>
+</div>
