--- a/src/app/components/prices/prices.component.html
+++ b/src/app/components/prices/prices.component.html
@@ -1,3 +1,29 @@
-<p>
-  prices works!
-</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand">Prices</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="marketDropdown" role="button" data-toggle="dropdown"
+        aria-haspopup="true" aria-expanded="false">{{exchange.name != null ? exchange.name : 'Market'}}</a>
+        <div style="max-height: 300px; overflow-y: auto;" class="dropdown-menu" aria-labelledby="marketDropdown">
+          <button (click)="getSymbols(ex)" *ngFor="let ex of topExchanges" class="dropdown-item">{{ex.name}}</button>
+          <div *ngIf="topExchanges.length > 0" class="dropdown-divider"></div>
+          <button (click)="getSymbols(ex)" *ngFor="let ex of exchanges" class="dropdown-item">{{ex.name}}</button>
+        </div>
+      </li>
+      <span class="form-inline my-2 my-lg-0 dropdown">
+        <input [formControl]="queryField" class="form-control mr-sm-2 dropdown-toggle"
+          type="search" placeholder="Search" aria-label="Search">
+        <div style="max-height: 300px; overflow-y: auto;" class="dropdown-menu" [ngClass]="{'show': searchResults.length > 0}">
+          <button (click)="getQuote(sym)" *ngFor="let sym of searchResults" class="dropdown-item">{{sym.displaySymbol}} - {{sym.description}}</button>
+        </div>
+      </span>
+    </ul>
+  </div>
+</nav>
+
+<app-quote *ngIf="quote !== undefined" [quote]="quote" [symbol]="symbol" [exchange]="exchange"></app-quote>
