Added metrics and loading spinners

--- a/src/app/components/news/news.component.html
+++ b/src/app/components/news/news.component.html
@@ -7,6 +7,10 @@
   <button (click)="viewType = false" *ngIf="viewType" class="btn btn-primary">List View</button>
 </div>
 
+<div *ngIf="news == undefined || news.length == 0" class="loading d-flex align-items-center justify-content-center">
+  <i class="fas fa-spinner text-primary"></i>
+</div>
+
 <div class="d-flex flex-wrap" [ngClass]="{'justify-content-center': viewType, 'flex-column' : !viewType}">
   <app-headline [viewType]="viewType" [headline]="item" *ngFor="let item of news"></app-headline>
 </div>
