--- a/src/app/components/prices/prices.component.html
+++ b/src/app/components/prices/prices.component.html
@@ -1,4 +1,8 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<div *ngIf="exchanges == undefined || exchanges.length == 0" class="loading d-flex align-items-center justify-content-center h-100">
+  <i class="fas fa-spinner text-primary"></i>
+</div>
+
+<nav *ngIf="exchanges && exchanges.length > 0" class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand">Prices</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
