--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -31,3 +31,50 @@
     </tbody>
   </table>
 </div>
+
+<div *ngIf="metric !== undefined" class="d-flex justify-content-around">
+  <div id="metrics">
+    <h4 class="text-info">Metrics</h4>
+    <tabset #metricTabs>
+      <tab heading="Margin" (selectTab)="getMetrics('margin')">
+        <div *ngIf="metricsLoading" class="loading d-flex align-items-center justify-content-center">
+          <i class="fas fa-spinner text-primary m-5"></i>
+        </div>
+        <table *ngIf="!metricsLoading" class="table table-striped">
+          <tbody>
+            <tr *ngFor="let item of metric.metric | keyvalue">
+              <th>{{item.key}}</th>
+              <td>{{item.value ? item.value : 'No Data'}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </tab>
+      <tab heading="Valuation" (selectTab)="getMetrics('valuation')">
+        <div *ngIf="metricsLoading" class="loading d-flex align-items-center justify-content-center h-100">
+          <i class="fas fa-spinner text-primary m-5"></i>
+        </div>
+        <table *ngIf="!metricsLoading" class="table table-striped">
+          <tbody>
+            <tr *ngFor="let item of metric.metric | keyvalue">
+              <th>{{item.key}}</th>
+              <td>{{item.value ? item.value : 'No Data'}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </tab>
+      <tab heading="Price" (selectTab)="getMetrics('price')">
+        <div *ngIf="metricsLoading" class="loading d-flex align-items-center justify-content-center h-100">
+          <i class="fas fa-spinner text-primary m-5"></i>
+        </div>
+        <table *ngIf="!metricsLoading" class="table table-striped">
+          <tbody>
+            <tr *ngFor="let item of metric.metric | keyvalue">
+              <th>{{item.key}}</th>
+              <td>{{item.value ? item.value : 'No Data'}}</td>
+            </tr>
+          </tbody>
+        </table>
+      </tab>
+    </tabset>
+  </div>
+</div>
