--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,15 @@ html, body {
     height: 100%;
 }
 
-app-news, app-prices {
+app-news, app-prices, app-tips {
     flex-grow: 1;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
