Added jumbotron and styling to prices component

--- a/src/app/components/prices/prices.component.css
+++ b/src/app/components/prices/prices.component.css
@@ -2,3 +2,20 @@
     font-size: 10rem;
     animation: spin 3s linear 0s infinite;
 }
+
+#search:hover {
+    color: #495057;
+    background-color: #fff;
+    border-color: #80bdff;
+    outline: 0;
+    box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25);
+}
+
+#search > input {
+    border: none;
+    outline: none;
+}
+
+input[type="search"]::-webkit-search-cancel-button {
+    display: none;
+  }
