--- a/src/app/components/quote/quote.component.css
+++ b/src/app/components/quote/quote.component.css
@@ -7,3 +7,9 @@ hr {
     font-size: 5rem;
     animation: spin 3s linear 0s infinite;
 }
+
+tab {
+    max-height: 400px;
+    overflow-y: auto;
+    padding: 10px;
+}
