--- a/src/app/components/d3-line-chart/d3-line-chart.component.html
+++ b/src/app/components/d3-line-chart/d3-line-chart.component.html
@@ -1,3 +1,3 @@
-<div class="h-100 w-100 p-2 border border-primary rounded">
-    <svg class="h-100 w-100" #chart id="chart"></svg>
+<div class="p-2 border border-primary rounded">
+    <svg></svg>
 </div>
