Added technical indicator object to quote component

--- a/src/app/components/prices/prices.component.html
+++ b/src/app/components/prices/prices.component.html
@@ -21,7 +21,7 @@
       </li>
       <span class="form-inline my-2 my-lg-0 dropdown">
         <span id="search" class="form-control mr-sm-2">
-          <input [formControl]="queryField"
+          <input style="background-color: white;" [formControl]="queryField"
           type="search" placeholder="Search..." aria-label="Search">
           <i class="fas fa-search"></i>
         </span>
