--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -1,3 +1,4 @@
+<!-- Summary -->
 <div id="summary" class="m-5">
   <div class="d-flex">
     <h3 class="text-primary mr-4">{{symbol.displaySymbol}}</h3>
@@ -5,40 +6,47 @@
   </div>
   <hr>
   
-  <h4 class="text-info">Summary</h4>
+  <h4 class="text-info">{{'Summary (' + exchange.currency + ')'}}</h4>
 
   <table class="table table-striped">
     <tbody>
       <tr>
-        <th>{{'Price (' + exchange.currency + ')'}}</th>
-        <td>{{quote.c}}</td>
+        <th>Price</th>
+        <td>{{quote.c.toFixed(2)}}p</td>
         <th>Change (%)</th>
         <td [ngClass]="{'text-success': change === 1, 'text-danger': change === 2}">{{percentageChange}}<i class="fas mx-2" *ngIf="change !== 0"
           [ngClass]="{'fa-caret-up': change === 1, 'fa-caret-down': change === 2}"></i>{{difference}}</td>
       </tr>
       <tr>
         <th>{{'High'}}</th>
-        <td>{{quote.h}}</td>
+        <td>{{quote.h.toFixed(2)}}p</td>
         <th>{{'Low'}}</th>
-        <td>{{quote.l}}</td>
+        <td>{{quote.l.toFixed(2)}}p</td>
       </tr>
       <tr>
         <th>{{'Time'}}</th>
         <td>{{quote.t * 1000 | date: 'dd-MM-yyyy'}} @ {{quote.t * 1000| date: 'hh:mm'}}</td>
         <th>{{'Last close'}}</th>
-        <td>{{quote.pc}}</td>
+        <td>{{quote.pc.toFixed(2)}}p</td>
       </tr>
     </tbody>
   </table>
 </div>
 
-<div class="d-flex justify-content-around flex-grow-1 align-items-stretch flex-wrap">
-  <div class="d-flex flex-column" *ngIf="candleData !== undefined">
-    <h4 class="text-info">Chart</h4>
-    <app-d3-line-chart class="flex-grow-1" [data]="chartData"></app-d3-line-chart>
+<div class="d-flex justify-content-around flex-wrap">
+  <div class="d-flex flex-column">
+  <!-- Chart -->
+    <div *ngIf="candleData !== undefined">
+      <h4 class="text-info">Chart</h4>
+      <app-d3-line-chart [data]="chartData" [yLabel]="chartYLabel"></app-d3-line-chart>
+    </div>
+    <!-- Technical Analysis -->
+    <h4 class="text-info">Technical Analysis</h4>
+    <app-d3-pie-chart></app-d3-pie-chart>
   </div>
+  
   <!-- Metrics -->
-  <div *ngIf="metric !== undefined" id="metrics">
+  <div *ngIf="metric !== undefined" class="m-3" id="metrics">
     <h4 class="text-info">Metrics</h4>
     <tabset #metricTabs>
       <tab heading="Margin" (selectTab)="getMetrics('margin')">
