--- a/src/app/components/d3-line-chart/d3-line-chart.component.html
+++ b/src/app/components/d3-line-chart/d3-line-chart.component.html
@@ -1,3 +1,3 @@
 <div class="p-2 border border-primary rounded">
-    <svg id="lineChart"></svg>
+    <svg class="w-100" id="lineChart"></svg>
 </div>
