--- a/src/app/components/d3-pie-chart/d3-pie-chart.component.html
+++ b/src/app/components/d3-pie-chart/d3-pie-chart.component.html
@@ -1,3 +1,22 @@
 <div class="p-2 border border-primary rounded">
-  <svg id="pieChart"></svg>
+  <div class="d-flex flex-row justify-content-around">
+    <svg id="pieChart"></svg>
+  <div class="m-4 d-flex flex-column justify-content-around">
+    <div class="d-flex align-items-center">
+      <div class="mr-1" style="width: 10px; height: 10px; background: green"></div>
+      <p class="m-0"> ({{data.technicalAnalysis.count.buy}} of {{totalCount}}) Buy</p>
+    </div>
+    <div class="d-flex align-items-center">
+      <div class="mr-1" style="width: 10px; height: 10px; background: blue"></div>
+      <p class="m-0"> ({{data.technicalAnalysis.count.neutral}} of {{totalCount}}) Neutral</p>
+    </div>
+    <div class="d-flex align-items-center">
+      <div class="mr-1" style="width: 10px; height: 10px; background: red"></div>
+      <p class="m-0"> ({{data.technicalAnalysis.count.sell}} of {{totalCount}}) Sell</p>
+    </div>
+    <div class="d-flex align-items-center">
+      <p class="m-0" style="white-space: nowrap;">This stock is {{data.trend.trending ? 'trending.' : 'not trending.'}}</p>
+    </div>
+  </div>
+  </div>
 </div>
