--- a/src/app/components/quote/quote.component.html
+++ b/src/app/components/quote/quote.component.html
@@ -34,7 +34,7 @@
 </div>
 
 <div class="d-flex justify-content-around flex-wrap">
-  <div class="d-flex flex-column">
+  <div class="d-flex flex-column ml-1">
   <!-- Chart -->
     <div class="my-3" *ngIf="candleData !== undefined">
       <h4 class="text-info">Chart</h4>
