--- a/src/app/components/prices/prices.component.html
+++ b/src/app/components/prices/prices.component.html
@@ -20,8 +20,8 @@
         </div>
       </li>
       <span class="form-inline my-2 my-lg-0 dropdown">
-        <span id="search" class="form-control mr-sm-2">
-          <input style="background-color: white;" [formControl]="queryField"
+        <span id="search" class="form-control d-flex align-items-center mr-sm-2">
+          <input class="flex-grow-1" style="background-color: white;" [formControl]="queryField"
           type="search" placeholder="Search..." aria-label="Search">
           <i class="fas fa-search"></i>
         </span>
