--- a/src/app/components/tips/tips.component.html
+++ b/src/app/components/tips/tips.component.html
@@ -1,3 +1,6 @@
-<p>
-  tips works!
-</p>
+<div class="jumbotron m-5">
+  <h1 class="display-4">Stocks & Shares Tips</h1>
+  <p class="lead">The latest tips and research on trending S&S.</p>
+  <hr class="my-4">
+  <p class="text-danger">Currently under construction.</p>
+</div>
