--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,8 @@
 <div id="background" class="d-flex flex-column justify-content-center align-items-center">
-  <div id="banner" class="p-3 m-5">
+  <div id="banner" class="p-5 m-5">
     <h1 class="display-4">Welcome to Stocks & Shares</h1>
     <hr class="my-4">
-    <p class="lead">Up to date news, stock prices and historic data.</p>
+    <p>Up to date news, stock prices and historic data.</p>
     <div class="d-flex justify-content-around">
       <a class="btn btn-primary" routerLink="/news" routerLinkActive="active">News</a>
       <a class="btn btn-primary" routerLink="/prices" routerLinkActive="active">Prices</a>
