Updated landing page banner margin

--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -13,5 +13,6 @@
 @media screen and (max-width: 600px) {
     #banner {
         padding: 1.5rem !important;
+        margin: 2rem !important;
     }
 }
