--- a/src/app/components/news/news.component.html
+++ b/src/app/components/news/news.component.html
@@ -3,14 +3,27 @@
   <p class="lead">Up to date news in the world of business</p>
   <hr class="my-4">
   <p>All articles are provided by 3rd party news outlets.</p>
-  <button (click)="viewType = true" *ngIf="!viewType && !hideBtn" class="btn btn-primary">Card View</button>
-  <button (click)="viewType = false" *ngIf="viewType && !hideBtn" class="btn btn-primary">List View</button>
+  <div class="input-group d-flex justify-content-between">
+    <button (click)="viewType = true" *ngIf="!viewType && !hideBtn" class="btn btn-primary">Card View</button>
+    <button (click)="viewType = false" *ngIf="viewType && !hideBtn" class="btn btn-primary">List View</button>
+    <div class="d-flex">
+      <div class="input-group-prepend">
+        <label class="input-group-text" for="orderBy">OrderBy</label>
+      </div>
+      <select (change)="orderByEvent($event.target.value)" class="form-control" id="orderBy">
+        <option value="desc">Oldest</option>
+        <option selected value="asce">Newest</option>
+      </select>
+    </div>
+  </div>
 </div>
 
-<div *ngIf="news == undefined || news.length == 0" class="loading d-flex align-items-center justify-content-center">
-  <i class="fas fa-spinner text-primary"></i>
-</div>
-
-<div class="d-flex flex-wrap" [ngClass]="{'justify-content-center': viewType, 'flex-column' : !viewType}">
+<div *ngIf="news$ | async as news; else spinner" class="d-flex flex-wrap" [ngClass]="{'justify-content-center': viewType, 'flex-column' : !viewType}">
   <app-headline [viewType]="viewType" [headline]="item" *ngFor="let item of news"></app-headline>
 </div>
+
+<ng-template #spinner>
+  <div class="loading d-flex align-items-center justify-content-center">
+    <i class="fas fa-spinner text-primary"></i>
+  </div>
+</ng-template>
